# ld-eda

./: .gitignore  README.md  config.json  pyproject.toml  setupenv
configs/: default-full.json  default.json  experiment1.json  experiment2.json  experiment3.json  global.json
create-report/: README.md
create-report/example_output/: decision-tree.html  index.html
create-report/src/: generate_report.py
create-report/templates/: base.html  family.html  index.html
datasets/expr1/: expr1-test-data.tab
datasets/expr2/: expr2-test-data.tab
datasets/expr3/: expr3-test-data.tab
experiment1/: baseline-cv.ows  baseline.html  baseline.ows  baseline.report  cv-vs-totd.html  cv-vs-totd.report  tuned.html  tuned.ows  tuned.report
experiment2/: baseline-cv.ows  baseline.html  baseline.ows  baseline.report  cv-vs-hold-out.html  cv-vs-hold-out.report  tuned.html  tuned.ows  tuned.report
results/: experiment1-default-cv.csv  experiment1-default-totd.csv  experiment1-experiment1-cv.csv  experiment1-experiment1-totd.csv  experiment1-global-totd.csv  experiment2-default-totd.csv  experiment2-experiment2-cv.csv  experiment2-experiment2-totd.csv  experiment3-default-cv.csv  experiment3-default-totd.csv  experiment3-experiment3-cv.csv  experiment3-experiment3-totd.csv  new-experiment1-evaluation-results.csv
src/liver/: app.py  cli.py  core.py  experiment.py  experiment1.py  experiment2.py  experiment3.py  learner.py  load.py  plot.py  plot2.py  tune.py  utils.py
src/liver/tuner/: app_window.py  config.py  runner.py  styles.py  ui_helpers.py  widgets.py
templates/: full_table.html  index.html  learner.html  report.html  script.js  styles.css
