[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liver-eda-project"
version = "1.1.1"
description = "Exploratory data analysis project using Orange3"
requires-python = ">=3.10"

dependencies = [
    # Additional
    "loguru",
    "plotly",
    "argcomplete",
    "seaborn",
    "Orange3", # Core Orange3
    "pandas>=2.3.3",
    "jinja2>=3.1.6",
]

[project.scripts]
liver = "liver.cli:main"

[tool.bumpversion]
current_version = "1.1.1"
commit = true
tag = true

[project.optional-dependencies]
# Install with: pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
 
# Install with: pip install -e ".[notebooks]"
notebooks = [
    "jupyter>=1.1",
    "ipykernel>=6.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Target Python version
target-version = "py311"

# Enable the most useful rule sets
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    # "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "A",   # builtins
    "C4",  # comprehensions
    "SIM", # simplify
    "TID", # tidy imports
]

# Rules that are too annoying for real projects
ignore = [
    "E501",  # line length (handled by formatter)
    "B008",  # do not call function in default argument (too strict)
    "SIM105",# suppress "use contextlib.suppress" suggestion
]

# Line length (for formatter)
line-length = 100

# Where to apply autofix
fix = true

# Exclude common junk
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
]

# isort-style import sorting
[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["liver"]

# Ruff formatter
[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "lf"
