[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ldc"
version = "1.7.0"
description = "Experimental machine learning study for liver disease classification using Orange3 & Python"
requires-python = ">=3.10"

dependencies = [
    # Additional
    "loguru",
    "plotly",
    "argcomplete",
    "seaborn",
    "Orange3", # Core Orange3
    "pandas>=2.3.3",
    "jinja2>=3.1.6",
    "bump-my-version>=1.3.0",
    "ruff"
]

[project.scripts]
liver = "liver.cli:main"

[tool.bumpversion]
current_version = "1.7.0"
commit = true
tag = true

[tool.ruff]
# Target Python version
target-version = "py311"

# Line length (for formatter)
line-length = 100

# Where to apply autofix
fix = true

# Exclude common junk
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
]

[tool.ruff.lint]
# Enable the most useful rule sets
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    # "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "A",   # builtins
    "C4",  # comprehensions
    "SIM", # simplify
    "TID", # tidy imports
]

# Rules that are too annoying for real projects
ignore = [
    "E501",  # line length (handled by formatter)
    "B008",  # do not call function in default argument (too strict)
    "SIM105",# suppress "use contextlib.suppress" suggestion
]

# isort-style import sorting
[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["liver"]

# Ruff formatter
[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "lf"
